--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "doc": "node generate.ts"
+    "doc": "ts-node generate.ts"
   },
   "dependencies": {
     "@nestjs/cache-manager": "^3.0.0",
