feat: Add WorkerAnalyticsService for worker distribution and hours reporting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "material-icon-theme.activeIconPack": "nest",
-    "CodeGPT.apiKey": "LM Studio"
+    "CodeGPT.apiKey": "LM Studio",
+    
 }
