--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cache-manager": "^6.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "colombia-holidays": "^0.0.1",
     "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
