--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "cache-manager": "^6.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "colombia-holidays": "^0.0.1",
     "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
+    "date-holidays": "^3.24.4",
     "exceljs": "^4.4.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
