--- a/.github/workflows/ping-render.yml
+++ b/.github/workflows/ping-render.yml
@@ -19,7 +19,7 @@ jobs:
 
           if [ "$current_day" -ge "$START_DAY" ] && [ "$current_day" -lt $((START_DAY + MAX_DAYS)) ]; then
             if [ "$current_hour" -ge 8 ] && [ "$current_hour" -lt 18 ]; then
-              curl -s https://demo-servidorplannerop.onrender.com/api> /dev/null
+              curl -s https://demo-servidorplannerop.onrender.com/ping> /dev/null
               echo "✅ Ping sent to Render"
             else
               echo "⏱ Fuera del horario (8am - 6pm) — sin ping"
