--- a/package.json
+++ b/package.json
@@ -6,16 +6,15 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist && prisma generate",
+    "prebuild": "rimraf dist",
     "build": "nest build",
-    "postinstall": "prisma generate",
-     "migrate:deploy": "prisma migrate deploy",
     "postbuild": "npm run doc && npm run copy-docs",
     "copy-docs": "copyfiles -u 1 \"docs/**/*\" dist/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
     "start:dev": "nest start --watch",
-     "start": "node dist/main.js",
-    "start:prod": "node dist/main.js",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -23,6 +22,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "doc": "ts-node generate.ts"
+  
   },
   "dependencies": {
     "@nestjs/cache-manager": "^3.0.0",
