--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "postbuild": "npm run doc && npm run copy-docs",
     "copy-docs": "copyfiles -u 1 \"docs/**/*\" dist/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "node dist/src/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main.js",
