--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
+    "prebuild": "npx rimraf dist",
+    "build": "npx prisma generate && npx prisma migrate deploy && nest build",
     "postbuild": "npm run doc && npm run copy-docs",
     "copy-docs": "copyfiles -u 1 \"docs/**/*\" dist/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "node dist/src/main.js",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main.js",
